# SafeTrace

./: .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
benchmark/safecoderepair/: tasks.json
docker/agent-service/: Dockerfile
docker/controller-service/: Dockerfile
docker/monitor-service/: Dockerfile
docker/results-service/: Dockerfile
docker/task-runner/: Dockerfile
docker/tracer-service/: Dockerfile
inference/: benchmark_inference.py  metrics.py  serve.sh
inference/vllm_config/: llama3-70b.yaml  qwen2.5-coder-32b.yaml
infra/helm/agent-service/: Chart.yaml  values.yaml
infra/helm/controller-service/: Chart.yaml  values.yaml
infra/helm/monitor-service/: Chart.yaml  (+1 more)
infra/slurm/: gpu_monitor.sh  submit_eval.slurm  vllm_serve.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
paper/: outline.md
results/: auth_bypass_001_safetrace_safe_trace.json  auth_bypass_001_safetrace_unsafe_trace.json  example_trace.json  full_20task_results.csv  full_results.csv  main_results.csv  monitor_comparison.json  summary.md  tables.tex
safetrace/: __init__.py  adversarial_agent.py  agent.py  ast_monitor.py  claude_agent.py  controller.py  diff_analyzer.py  embedding_monitor.py  ensemble_monitor.py  learned_monitor.py  local_agent.py  monitor.py  policies.py  prompts.py  schemas.py  test_runner.py  tracer.py  utils.py
scripts/: compare_monitors.py  download_model.py  make_report.py  plot_results.py  run_agent.py  run_eval.py  start_vllm.sh  summarize_results.py  train_monitor.py
(+243 files in other folders)
